Updated to use common service account. Changes to pubsub message processing. Added account reset method.
